fix: Handled errors when bad sqs message received

--- a/serverless.yml
+++ b/serverless.yml
@@ -38,7 +38,7 @@ functions:
           bucket: ${self:custom.bucketName}
           event: s3:ObjectCreated:*
           rules:
-            - prefix: uploads/
+            - prefix: events/
             - suffix: .csv
   sqsEventHandler:
     handler: src/handlers/event-handler.sqsEventHandler
